--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Inventaire</title>
+  <title>Inventaire — v10.2</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1 id="app-title">Inventaire</h1>
+    <h1>Inventaire — v10.2</h1>
     <div class="toolbar">
       <!-- Auth sur 3 lignes -->
       <div id="auth-area" class="auth">
@@ -69,7 +69,7 @@
   </template>
 
   <footer>
-    <p id="app-footer">Inventaire • Données Supabase</p>
+    <p>Inventaire — v10.2 • Données Supabase</p>
   </footer>
 
   <script type="module" src="app.js"></script>
