--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
       <div class="palette-inline">
         <label for="palette-code">Numéro palette</label>
         <input type="text" id="palette-code" placeholder="Ex: PAL-2025-000123" />
-
-        <label for="palette-location">Localisation</label>
-        <input type="text" id="palette-location" placeholder="Ex: Réserve / Allée A / Quai" />
-
         <button id="btn-load-palette">Charger</button>
       </div>
 
@@ -41,6 +37,12 @@
         <button id="print">Imprimer</button>
         <span class="status" id="status"></span>
       </div>
+    
+      <div class="palette-location">
+        <label for="palette-location">Localisation</label>
+        <input type="text" id="palette-location" placeholder="Ex: Zone A / Allée 3 / Rack B2" />
+      </div>
+
     </div>
   </header>
 
