--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Inventaire — v11.4.2</h1>
+    <h1>Inventaire — v11.4.3.3</h1>
     <div class="toolbar">
       <!-- Auth sur 3 lignes -->
       <div id="auth-area" class="auth">
@@ -54,7 +54,7 @@
           <input id="photo-input" type="file" accept="image/*" capture="environment" hidden />
         </div>
         <div id="palette-photos" class="palette-photos"></div>
-<div class="photo-hint">Formats supportés : JPG / PNG / WEBP</div>
+<div class="photo-hint">Formats supportés : JPG / PNG / WEBP — compression automatique</div>
       </div>
 
 
