--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Inventaire — v12.0-fix</title>
+  <title>Inventaire — v12.1-fix</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Inventaire — v12.0</h1>
+    <h1>Inventaire — v12.1</h1>
     <div class="toolbar">
       <!-- Auth sur 3 lignes -->
       <div id="auth-area" class="auth">
@@ -89,7 +89,7 @@
   </template>
 
   <footer>
-    <p> </p>
+    <p>Inventaire — v12.1-fix • Données Supabase</p>
   </footer>
 
   <script type="module" src="app.js"></script>
